--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@heroicons/react": "^2.0.13",
     "cloudinary": "^1.32.0",
     "eslint-config-next": "^13.0.1",
+    "expo": "^50.0.17",
     "framer-motion": "^7.6.4",
     "imagemin": "^8.0.1",
     "imagemin-jpegtran": "^7.0.0",
@@ -18,6 +19,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hooks-global-state": "^2.0.0",
+    "react-icons": "^5.2.0",
+    "react-native-svg": "^15.2.0",
     "react-swipeable": "^7.0.0",
     "react-use-keypress": "^1.3.1"
   },
@@ -25,6 +28,7 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "autoprefixer": "^10.4.13",
+    "babel-plugin-inline-react-svg": "^2.0.2",
     "postcss": "^8.4.18",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
